<resources>
    <string name="app_name">Movies App</string>
    <string name="image_description">Image</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="menu_home">Home</string>
    <string name="menu_favorite">Favorite</string>

    <string name="title_activity_detail_home">DetailHomeActivity</string>
    <string name="no_data">Empty data</string>
    <string name="something_wrong">Oops.. something went wrong</string>
    <string name="title_favorite">Favorite</string>
    <string name="durasi">String</string>
    <string name="user_score">User Score</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="genre">Genre</string>
    <string name="ori_title">Original Title</string>
    <string name="average">Average</string>
    <string name="popularity">Popularity</string>
    <string name="language">Language</string>
    <string name="count">Count</string>
    <string name="popularity2">Popularity :</string>
    <string name="count2">Count :</string>
    <string name="background">Background</string>
    <string name="poster">Poster</string>
</resources>
